Change log 1.5 (under development)
----------------------------------
* Added the "toThrow" method to the stubber API. You can now do e.g. "stub(method("methodName")).toThrow(new Exception())".

Change log 1.4 (2010-07-22)
---------------------------
* Implemeted support for mocking instance methods of final system classes with the Mockito extension API (issue 169)
* Partial mocking of instance methods in final system classes not having a default constructor now works in the EasyMock extension API (issue 170)
* The deep cloner can now clone java.reflect.Method objects correctly to a different classloader.
* Fixed a critical bug in the ClassloaderExecutor which prevented it from running methods returning void. This affected the PowerMockRule which prevented it from executing test methods (even though it looked like it did) (issue 268, also closes issue 245)
* Upgraded to Javassist 3.13 (issue 269)
* Fixed some problems with Withbox regarding invocation of var args member class constructors and methods (issue 267).
* Partial mocking of public static methods now works in Mockito (issue 261)
* Better clean-up in test runner which fixes some java.lang.OutOfMemoryError errors in large test suites.

Change log 1.3.9 (2010-07-14)
----------------------------------
* Upgraded the Mockito extension API to support Mockito 1.8.5
* Upgraded the EasyMock extension API to support EasyMock 3.0 (issue 259)
* Spying with PowerMockito now retains object state (issue 263)

Change log 1.3.8 (2010-05-13)
-----------------------------
* Fixed a bug in DeepCloner which caused a NullPointerException for arrays containing null values.
* Changed groupId of the PowerMock JUnit Rule project to org.powermock.modules.
* Included PowerMock rule in the released artifacts
* verifyNew with arguments no longer throws NullPointerException when missing expectation in the Mockito extension API.